# Frontend-Assessment

./: .dockerignore  .eslintrc  .gitignore  .gitmodules  .huskyrc  .lintstagedrc  Dockerfile  GettingStarted.md  Procfile  README.md  SETUP.md  docker-compose-old.yml  docker-compose.yml  env.config.ts  heroku.yml  lerna.json  nodemon.json  package.json  server-package.json  service-tsconfig.json  startup.sh  tsconfig.json
data-layer/: .gitignore  README.rst  poetry.toml  pyproject.toml
data-layer/data_layer/: settings.py
data-layer/data_layer/models/: __init__.py  admin.py  admins.py  note.py  notes.py  user.py  users.py
data-layer/migrations/: env.py
data-layer/migrations/versions/: 036a3bc22adb_added_indexes_to_users.py  0505286e86e7_added_notes_table.py  0514e3418c6b_added_notes_table.py  07bd6eb2c9eb_added_notes_and_users_table.py  0b53d82fb93f_added_users_table_again.py  169271a724af_added_password_to_users.py  1716f0aea839_update_notes_table_column_ownerid.py  1a04e8f338e8_added_tables.py  1ae6ed11ce0d_added_notes_table.py  1cd9fcad8ffc_made_username_field_unique.py  2327f9633332_the_end.py  2d296a0ef63b_added_users_table.py  2d59e250f085_added_notes_table.py  2dab75d7140b_added_notes_table.py  32e4de67fa1f_added_users_and_notes_tables.py  34ef1bf3ce8d_admin_table.py  3515e4614b23_added_notes_table.py  367c1a811719_added_author_id_column.py  36999d9ab4fa_added_notes_table.py  3d0ad6375078_added_notes.py  3d2e2ffa3ad9_added_notes_and_users_and_admin_table.py  3f2cff274c48_added_notes_table.py  4ed36eca098d_users_table.py  (+38 more)
data-layer/tests/: test_data_layer.py
(+188 files in other folders)
