[tool.poetry]
name = "data-layer"
version = "0.1.0"
description = ""
authors = ["Beesama <gbozee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
sqlalchemy = "^1.3.18"
alembic = "^1.4.2"
psycopg2-binary = "^2.8.5"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^19.10b0"
ipython = "^7.16.1"
pdbpp = "^0.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
